...
          onPress={readNextChapterInBrowser}
          underlayColor="#eeeeee">
          <View>
            <Text h2 style={centered}>
              {bookNameForChapter}
            </Text>
            <Text h1 testID="currentChapter" style={centered}>
              {nextChapter}
            </Text>
          </View>
        </TouchableHighlight>
        {this.renderNextChapterButton({markNextChapterRead})}
        {this.renderErrorMessage()}
...

  renderNextChapterButton = ({markNextChapterRead}) =>
    this.props.saving ? (
      <PrimaryButton title="Saving…" disabled={true} />
    ) : (
      <PrimaryButton
        testID="markChapterRead"
        title="Mark Chapter Read"
        onPress={markNextChapterRead}
      />
    );

  renderStartButton = () => (
...
